namespace Quoridor.Model
{
    public class Cell
    {
        public bool IsBusy { get; set; }

        public Cell()
        {
            IsBusy = false;
        }
    }
}
