using Quoridor.Model;

namespace Model
{
    public class WallPlacer
    {
        private readonly ModelCommunication _model;

        public WallPlacer(ModelCommunication model)
        {
            _model = model;
        }
    }
}
